# CLionProjects

./: README.md
03_CMake_Tutorial/: CMakeLists.txt  main.cpp
03_CMake_Tutorial/include/: library.h
03_CMake_Tutorial/src/: calc.cpp
04_File_Operations/: CMakeLists.txt  OutputFileHandler.cpp  OutputFileHandler.h  main.cpp
06_Kompilowanie/: CMakeLists.txt
06_Kompilowanie/include/: math.h
06_Kompilowanie/src/: main.cpp
07_Google_Test/: CMakeLists.txt  Gtest.srctrldb  Gtest.srctrlprj  main.cpp
07_Google_Test/src/: CMakeLists.txt  OrbitalMath.cpp  OrbitalMath.h
07_Google_Test/test/: CMakeLists.txt  ExampleTests.cpp
Blogs/05_Progress_Bar/: CMakeLists.txt  ProgressBar.cpp  ProgressBar.h
Books/01_Czysty_Kod_w_Cpp17/: CMakeLists.txt  main.cpp
Books/02_Cpp_Primer/: CMakeLists.txt  main.cpp
Udemy/01_Design_Patterns_in_Modern_Cpp/: Readme.md
Udemy/01_Design_Patterns_in_Modern_Cpp/04_Factories/: CMakeLists.txt  DrinkFactory.h  HotDrink.h  HotDrinkFactory.h  main.cpp
Udemy/01_Design_Patterns_in_Modern_Cpp/05_Prototype/: CMakeLists.txt  main.cpp
Udemy/01_Design_Patterns_in_Modern_Cpp/06_Singleton/: CMakeLists.txt  main.cpp
Udemy/01_Design_Patterns_in_Modern_Cpp/08_Bridge/: CMakeLists.txt  Person.cpp  Person.h  main.cpp  pimpl.cpp  pimpl.h
Udemy/02_Learn_Advanced_Cpp_Programming/08_C++11/Fractal_Images_Project/: Bitmap.cpp  Bitmap.h  BitmapFileHeader.h  BitmapInfoHeader.h  CMakeLists.txt  FractalCreator.cpp  FractalCreator.h  Mandelbrot.cpp  Mandelbrot.h  RGB.cpp  RGB.h  Zoom.cpp  Zoom.h  ZoomList.cpp  ZoomList.h  main.cpp
(+55 files in other folders)
